# CppTemplate

./: CMakeLists.txt  CPP_TEMPLATE.md  build.sh  run.sh
.github/workflows/: standalone.yml
documentation/: CMakeLists.txt  conf.py
documentation/pages/: about.dox
include/{#PROJECT_TITLE_LOWER#}/: README.md
standalone/: CMakeLists.txt
standalone/source/: main.cpp
test/: CMakeLists.txt
test/source/: greeter.cpp
